update logic, add open wechat
